--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/dedust1.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/dedustvid.gif" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">我和我的队友们，结合室内施工现场条件和工人的习惯，设计了一款含活性磁化水雾化降尘体系的产品【DeDUST】。主要由降尘水箱、活化剂定量添加系统、加压输送系统、磁化系统作业检测系统、雾化系统组成,这款产品上下可分离，操作简单且便于移动
                                     </p>
